--- a/src/LinqToMongo/LinqToMongo.csproj
+++ b/src/LinqToMongo/LinqToMongo.csproj
@@ -47,7 +47,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExpressionToQueryConverter.cs" />
+    <Compile Include="MongoQueryProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryableMongo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
