--- a/src/LinqToMongo.Tests/LinqToMongo.Tests.csproj
+++ b/src/LinqToMongo.Tests/LinqToMongo.Tests.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="ExpressionToQueryConverterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryableMongoTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LinqToMongo\LinqToMongo.csproj">
