Decoupling MongoDB (testability improvement)
It's really hard to Mock and Test driver's object model. So,

--- a/src/LinqToMongo/LinqToMongo.csproj
+++ b/src/LinqToMongo/LinqToMongo.csproj
@@ -46,7 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Adapters\MongoCursorAdapter.cs" />
     <Compile Include="ExpressionToQueryConverter.cs" />
+    <Compile Include="Adapters\MongoCollectionAdapter.cs" />
     <Compile Include="MongoExtensions.cs" />
     <Compile Include="MongoQueryProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
