--- a/src/LinqToMongo.Tests/LinqToMongo.Tests.csproj
+++ b/src/LinqToMongo.Tests/LinqToMongo.Tests.csproj
@@ -37,6 +37,9 @@
     <Reference Include="MongoDB.Driver">
       <HintPath>..\packages\mongocsharpdriver.1.3.1\lib\net35\MongoDB.Driver.dll</HintPath>
     </Reference>
+    <Reference Include="Moq">
+      <HintPath>..\packages\Moq.4.0.10827\lib\NET40\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.core">
       <HintPath>..\..\util\nunit\nunit.core.dll</HintPath>
     </Reference>
